# led_matrix_zmq

./: Cargo.toml
.cargo/: config.toml
examples/: test_pattern.rs
resources/: matrix_frag.wgsl
src/: client.rs  server.rs
viewer/: Cargo.toml
viewer/src/: main.rs
virtual_viewer/: Cargo.toml
virtual_viewer/src/: viewer.rs
virtual_viewer_new/: Cargo.toml
virtual_viewer_new/src/: main.rs  viewer.rs
