[package]
name = "viewer"
version = "0.1.3"
edition = "2021"

[dependencies]
led_matrix_zmq = { path = "../" }
clap = "3.0"

# rpi-led-matrix = { version = "0.4.1", features = ["args"] }

# [patch.crates-io]
rpi-led-matrix = { git = 'http://github.com/mmhobi7/rust-rpi-rgb-led-matrix.git', branch="main", version = "0.4.1", features = ["args"]}
